examples/invalid_programs/var_type_and_expr_mismatch.qyk
func first_case() void {
    var x int = "Some string"
}

func second_case() int {
    return 1.0
}

func third_case() void {
    var x float = 1

    return x
}
